_sass/main.scss
/* ... */
/***************************************************
 * FOOTER
 ***************************************************/
.footer {
  background: $bg-color;
  color: $text-color;
  margin: 0.5rem;
  padding: 1rem;
  text-align: center;
  a {
    color: $primary-color;

    &:hover,
    &:focus {
      background: $bg-color;
      color: $text-color;
    }
  }
}

/***************************************************
 * LANDING/GREETING SECTION
 ***************************************************/
#landing {
  background: url("/assets/img/austin.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0% 50%;
  color: $text-color;
  display: flex;
  height: 100%;
  text-align: center;

  .landing-inner {
    min-width: 375px;
    max-width: 95%;
    margin: 0 auto;
    padding: 0.75rem;
    background: rgba(0, 0, 0, 0.25);
    border-radius: $border-radius;
  }

  .landing-title {
    left: 0;
    margin: 0.5rem;
    position: absolute;
    right: 0;
    top: 40%;
  }

  .landing-icons {
    display: flex;
    justify-content: center;

    .social-link {
      color: $text-color;
      position: relative;
      width: 4rem;
      height: 4rem;
      line-height: 4rem;
      margin: 0.25rem;
      transition: $transition;

      .circle {
        animation: outWaveOut 1s cubic-bezier(0.42, 0, 0.58, 1) forwards;
        fill: $text-color;
        stroke-dasharray: 40;
        transition: $transition;
        fill-opacity: 0;
      }

      .social {
        font-size: 2rem;
        position: absolute;
        top: 0px;
        transition: $transition;
        width: 100%;
      }

      .social-icon {
        color: white;
      }

      .label {
        position: relative;
        top: -4rem;
        opacity: 0;
        transition: $transition;
      }

      &:hover {
        cursor: pointer;

        .circle {
          animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
            colorDefaultIcon 1s linear forwards;
          fill-opacity: 1;
        }

        .social-icon {
          color: $fourth-color;
        }

        .label {
          opacity: 1;
          top: -2rem;
        }
      }

      &.github:hover {
        .circle {
          animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
            colorGithub 1s linear forwards;
        }
        .social-icon {
          color: $github-color;
        }
      }

      &.email:hover {
        .circle {
          animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
            colorEmail 1s linear forwards;
        }
        .social-icon {
          color: $primary-color;
        }
      }

      &.linkedin:hover {
        .circle {
          animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
            colorLinkedin 1s linear forwards;
        }
        .social-icon::before {
          color: $linkedin-color;
        }
      }

      &.twitter:hover {
        .circle {
          animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
            colorTwitter 1s linear forwards;
        }
        .social-icon {
          color: $twitter-color;
        }
      }

      &.pdf:hover {
        .circle {
          animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
            colorPdf 1s linear forwards;
        }
        .social-icon {
          color: $secondary-color;
        }
      }
    }
  }

  #txt-rotate {
    border-bottom: 1px solid $text-color;
    padding-bottom: 0.75rem;
    margin: 0 0 0.75rem 0;
  }
}

/***************************************************
 * SKILLS SECTION
 ***************************************************/
#skills {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  #skill-cloud {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    span {
      padding: 0.2rem;
      transition: $transition;

      &[skill-type="language"] {
        color: $primary-color;
      }
      &[skill-type="framework"] {
        color: $secondary-color;
      }
      &[skill-type="tool"] {
        color: $third-color;
      }
      &[skill-weight="1"] {
        font-size: 0.75rem;
        line-height: 0.25rem;
      }
      &[skill-weight="2"] {
        font-size: 1.25rem;
        line-height: 0.75rem;
      }
      &[skill-weight="3"] {
        font-size: 1.75rem;
        line-height: 1.25rem;
      }
      &[skill-weight="4"] {
        font-size: 2.25rem;
        line-height: 1.75rem;
      }
      &[skill-weight="5"] {
        font-size: 2.75rem;
        line-height: 2.25rem;
      }
    }
  }

  input[type="radio"] {
    display: none;
  }

  .filter-button {
    display: none;
  }
}

/***************************************************
 * TIMELINE SECTION
 ***************************************************/
.timeline {
  display: none;

  .timeline__items {
    .timeline__item {
      &::after {
        background-color: $text-color;
      }
    }
    .timeline__item--left {
      text-align: right;

      .timeline__content {
        &::after {
          border-left: 11px solid $text-color;
        }
      }
    }
    .timeline__item--right {
      text-align: left;

      .timeline__content {
        &::after {
          border-right: 11px solid $text-color;
        }
      }
    }
  }
}

.mobile-timeline {
  display: block;
  .timeline__content {
    &::after,
    &::before {
      border: none;
      content: initial;
      height: initial;
      transform: initial;
      top: initial;
      right: initial;
      z-index: initial;
    }
  }
}
/* ... */

